--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="container text-center">
       <h1>EDIT TITLE here</h1>
       <p class="lead">by Elizabeth Murphy</p>
-      <p class="lead">Last updated on editor CURRENT DATE</p>
+      <p class="lead">Last updated on editor November 22, 2024 </p>
       <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
     </div>
   </header>
