--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <header class="bg-primary text-white">
     <div class="container text-center">
-      <h1>EDIT TITLE here</h1>
+      <h1>How Does Your USA Home Compare?</h1>
       <p class="lead">by Elizabeth Murphy</p>
       <p class="lead">Last updated on editor November 22, 2024 </p>
       <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
@@ -134,15 +134,16 @@
 
           <h4>Sample sentences</h4>
 
-          <p>The City of Hartford recently created a housing code that requires the registration of the full names and contact information for all owners of apartment buildings -- including the officers of Limited Liability Corporations (LLCs) -- in order to "close municipal loopholes that allow anonymous slumlords to operate unchecked" (Lurye).</p>
+          <p>The housing crisis in Connecticut has gotten worse according to a report published by Federal Housing Finance Agency (Ragland).</p>
 
-          <p>In most towns, the percentage of high-needs students enrolled in traditional public schools surpasses those enrolled in magnet, charter, and technical schools in the most recent academic year (“Resident Town Export”).</p>
+      
 
           <p>...later, insert a bibliography at the end of your data story:</p>
 
           <h4>Works Cited:</h4>
 
-          <p>Lurye, Rebecca. “New Housing Code in Hartford Would Keep Slumlords from Hiding Behind LLCs.” Hartford Courant, May 31, 2019. <a href='https://www.courant.com/community/hartford/hc-news-hartford-housing-code-20190531-hcke2jo2x5fpdgz75xf4hlv2ki-story.html'>https://www.courant.com/community/hartford/hc-news-hartford-housing-code-20190531-hcke2jo2x5fpdgz75xf4hlv2ki-story.html</a>.</p>
+          <p>Ragland, Jamil. “New Reports Show Connecticut’s Housing Crisis Continues to Worsen.” Partnership for Strong Communities, 4 June 2024, <a href='https://pschousing.org/new-reports-show-connecticuts-housing-crisis-continues-to-worsen/ pschousing.org/new-reports-show-connecticuts-housing-crisis-continues-to-worsen/>https://pschousing.org/new-reports-show-connecticuts-housing-crisis-continues-to-worsen/</a>.</p> 
+      
 
           <p>“Resident Town Export.” CT.Gov EdSight, <a href='https://public-edsight.ct.gov/Overview/Resident-Town-Dashboard/Resident-Town-Export'>https://public-edsight.ct.gov/Overview/Resident-Town-Dashboard/Resident-Town-Export</a>. Accessed 29 Nov. 2022.</p>
 
