--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
   <header class="bg-primary text-white">
     <div class="container text-center">
       <h1>How Does Your USA Home Compare?</h1>
-      <p class="lead">by Elizabeth Murphy</p>
-      <p class="lead">Last updated on editor November 22, 2024 </p>
+      <p class="lead">by Ainsley Steele & Elizabeth Murphy</p>
+      <p class="lead">Last updated on editor December 2, 2024 </p>
       <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
     </div>
   </header>
