--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <header class="bg-primary text-white">
     <div class="container text-center">
-      <h1>How Does Your USA Home Compare?</h1>
+      <h1>How Does Your Land-Trust USA Home Compare to Similar Homes in Southwest Hartford?</h1>
       <p class="lead">by Ainsley Steele & Elizabeth Murphy</p>
       <p class="lead">Last updated on editor December 2, 2024 </p>
       <p class="lead">for Data Visualization for All</br>with Prof. Jack Dougherty</br>Trinity College, Hartford CT, USA</p>
